--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="app-container">
+        <!-- Version badge -->
+        <div class="version-badge">{{ version }}</div>
+
         <!-- Particles container for effects -->
         <div id="particles"></div>
 
